fixing alignment grid

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 body {
   overflow-x: hidden;
 }
+
 .jumbotron {
   padding-top: 2rem;
+}
+
+footer a {
+  text-decoration: none;
 }
